# TimeCraft_2

./: requirements.tsx  tc_dev_db_backup.sql  wsgi.py
backend/: .env  .gitignore  .repomix-output.txt  requirements.tsx
backend/alembic/: env.py
backend/database_setup/: create_tables.sql
backend/local-docs/: timecraft.md
backend/models/: .gitignore  basemodel.py  dailylog.py  task.py  user.py
backend/v1/: app.py
backend/v2/: .env.example  .gitignore  Dockerfile  __init__.py  app.py  docker-compose.yml  index.py  pyproject.toml  requirements.txt
backend/v2/activity/: functions.py  index.py  validation.py
backend/v2/alembic/: env.py
backend/v2/alembic/versions/: 10ec9562f6b3_changing_the_basemodel_class.py  6e5ab13242e1_updating_the_profile_table.py  f91c39ca4f32_renaming_the_task_table_to_activity.py
backend/v2/auth/: functions.py  index.py  validation.py
backend/v2/db/postgres/: docker-compose.yaml
backend/v2/engine/: __init__.py  storage.py
backend/v2/models/: Activity.py  Basemodel.py  Profile.py  Report.py  Task.py  User.py  __init__.py
backend/v2/profile/: functions.py  index.py  validation.py
backend/v2/report/: __init__.py  functions.py  index.py  schemas.py  validation.py
backend/v2/utils/: middleware.py
frontend/: Dockerfile  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: index.css  routeTree.gen.ts  router.ts
models/: user.py
models/engine/: storage.py
rtime_craft/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
tc_env/: pyvenv.cfg
(+170 files in other folders)
